syntax = "proto2";

package  Docapost.IA.Tesseract.Proto;

message Result {
	required string uuid = 1;
	required int32 threadId = 2;
	required int64 Start = 3;
	required int64 End = 4;
	required int64 Ellapsed = 5;
	repeated string Result = 6;
}