syntax = "proto2";

import "Synchro_Master.proto";
import "Status.proto";

package  Docapost.IA.Tesseract.Proto;

message Message_Master {	
	oneof message {
		Synchro_Master synchro = 1;
		Status status = 2;
	}
}