syntax = "proto2";

package  Docapost.IA.Tesseract.Proto;

import "Result.proto";

message Synchro_Slave {	
	required int32 ThreadRunning = 1;
	optional int32 NbFilesRequired = 2;
	
	repeated Result Data = 3;
}